--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,6 @@
 version: "{branch} (#{build})"
 
 image:
-  - Visual Studio 2013
   - Visual Studio 2015
   - Visual Studio 2017
   - Visual Studio 2019
@@ -30,29 +29,17 @@ environment:
       SEPARATE_COMPILATION: 1
       WIN9X: 1
       MSVC: 1
-    - USING_BOOST: 1
-      HEADER_ONLY: 1
-      MSVC: 1
-    - USING_BOOST: 1
-      SEPARATE_COMPILATION: 1
-      MSVC: 1
-    - USING_BOOST: 1
-      SEPARATE_COMPILATION: 1
-      MINGW: 1
+#    - USING_BOOST: 1
+#      HEADER_ONLY: 1
+#      MSVC: 1
+#    - USING_BOOST: 1
+#      SEPARATE_COMPILATION: 1
+#      MSVC: 1
+#    - USING_BOOST: 1
+#      SEPARATE_COMPILATION: 1
+#      MINGW: 1
 
 for:
-  -
-    matrix:
-      only:
-        - image: Visual Studio 2013
-    environment:
-      BOOSTDIR: C:\Libraries\boost_1_58_0
-    build_script:
-      - call "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x86
-      - call "C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\vcvarsall.bat" x86
-      - cd asio\src
-      - nmake -f Makefile.msc
-      - nmake -f Makefile.msc check
   -
     matrix:
       only:
@@ -105,14 +92,6 @@ for:
 
 matrix:
   exclude:
-    - image: Visual Studio 2013
-      SEPARATE_COMPILATION: 1
-    - image: Visual Studio 2013
-      CXXLATEST: 1
-    - image: Visual Studio 2013
-      USING_BOOST: 1
-    - image: Visual Studio 2013
-      MINGW: 1
     - image: Visual Studio 2015
       HEADER_ONLY: 1
     - image: Visual Studio 2015
@@ -125,15 +104,15 @@ matrix:
       CXXLATEST: 1
     - image: Visual Studio 2017
       WIN9X: 1
-    - image: Visual Studio 2017
-      USING_BOOST: 1
+#    - image: Visual Studio 2017
+#      USING_BOOST: 1
     - image: Visual Studio 2017
       MINGW: 1
     - image: Visual Studio 2019
       HEADER_ONLY: 1
     - image: Visual Studio 2019
       WIN9X: 1
-    - image: Visual Studio 2019
-      USING_BOOST: 1
+#    - image: Visual Studio 2019
+#      USING_BOOST: 1
     - image: Visual Studio 2019
       MINGW: 1
