--- a/asio/src/Makefile.mgw
+++ b/asio/src/Makefile.mgw
@@ -180,23 +180,11 @@ CPP11_EXAMPLE_EXES = \
 	examples/cpp11/echo/blocking_tcp_echo_server.exe \
 	examples/cpp11/echo/blocking_udp_echo_client.exe \
 	examples/cpp11/echo/blocking_udp_echo_server.exe \
-	examples/cpp11/http/client/async_client.exe \
-	examples/cpp11/http/client/sync_client.exe \
-	examples/cpp11/http/server/http_server.exe \
-	examples/cpp11/http/server2/http_server.exe \
-	examples/cpp11/http/server3/http_server.exe \
-	examples/cpp11/http/server4/http_server.exe \
-	examples/cpp11/icmp/ping.exe \
 	examples/cpp11/invocation/prioritised_handlers.exe \
-	examples/cpp11/iostreams/daytime_client.exe \
-	examples/cpp11/iostreams/daytime_server.exe \
 	examples/cpp11/iostreams/http_client.exe \
 	examples/cpp11/multicast/receiver.exe \
 	examples/cpp11/multicast/sender.exe \
 	examples/cpp11/nonblocking/third_party_lib.exe \
-	examples/cpp11/porthopper/client.exe \
-	examples/cpp11/porthopper/server.exe \
-	examples/cpp11/services/daytime_client.exe \
 	examples/cpp11/socks4/sync_client.exe \
 	examples/cpp11/timeouts/async_tcp_client.exe \
 	examples/cpp11/timeouts/blocking_tcp_client.exe \
@@ -204,31 +192,25 @@ CPP11_EXAMPLE_EXES = \
 	examples/cpp11/timeouts/blocking_udp_client.exe \
 	examples/cpp11/timeouts/server.exe \
 	examples/cpp11/timers/time_t_timer.exe \
-	examples/cpp11/tutorial/timer1/timer.exe \
-	examples/cpp11/tutorial/timer2/timer.exe \
-	examples/cpp11/tutorial/timer3/timer.exe \
-	examples/cpp11/tutorial/timer4/timer.exe \
-	examples/cpp11/tutorial/timer5/timer.exe \
-	examples/cpp11/tutorial/daytime1/client.exe \
-	examples/cpp11/tutorial/daytime2/server.exe \
-	examples/cpp11/tutorial/daytime3/server.exe \
-	examples/cpp11/tutorial/daytime4/client.exe \
-	examples/cpp11/tutorial/daytime5/server.exe \
-	examples/cpp11/tutorial/daytime6/server.exe \
-	examples/cpp11/tutorial/daytime7/server.exe \
 	examples/cpp11/windows/transmit_file.exe
+
+OTHER_CPP11_EXAMPLE_EXES = \
+	examples/cpp11/http/server/http_server.exe
 
 ifdef STANDALONE
 all: \
 	$(SEPARATE_COMPILATION_LIB) \
-	$(UNIT_TEST_EXES)
+	$(PERFORMANCE_TEST_EXES) \
+	$(UNIT_TEST_EXES) \
+	$(CPP11_EXAMPLE_EXES) \
+	$(OTHER_CPP11_EXAMPLE_EXES)
 else
 all: \
 	$(SEPARATE_COMPILATION_LIB) \
 	$(PERFORMANCE_TEST_EXES) \
 	$(UNIT_TEST_EXES) \
-	$(EXAMPLE_EXES) \
-	$(OTHER_EXAMPLE_EXES)
+	$(CPP11_EXAMPLE_EXES) \
+	$(OTHER_CPP11_EXAMPLE_EXES)
 endif
 
 ifdef SEPARATE_COMPILATION
@@ -253,7 +235,7 @@ clean:
 $(UNIT_TEST_EXES): %.exe: %.o
 	g++ -o$@ $(LDFLAGS) $< $(LIBS)
 
-$(PERFORMANCE_TEST_EXES) $(EXAMPLE_EXES): %.exe: %.o
+$(PERFORMANCE_TEST_EXES) $(CPP11_EXAMPLE_EXES): %.exe: %.o
 	g++ -o$@ $(LDFLAGS) $< $(LIBS)
 
 examples/cpp11/http/server/http_server.exe: \
@@ -265,32 +247,6 @@ examples/cpp11/http/server/http_server.exe: \
 		examples/cpp11/http/server/request_handler.o \
 		examples/cpp11/http/server/request_parser.o \
 		examples/cpp11/http/server/server.o
-	g++ -o$@ $(LDFLAGS) $^ $(LIBS)
-
-examples/cpp11/http/server2/http_server.exe: \
-		examples/cpp11/http/server2/connection.o \
-		examples/cpp11/http/server2/io_context_pool.o \
-		examples/cpp11/http/server2/main.o \
-		examples/cpp11/http/server2/mime_types.o \
-		examples/cpp11/http/server2/reply.o \
-		examples/cpp11/http/server2/request_handler.o \
-		examples/cpp11/http/server2/request_parser.o \
-		examples/cpp11/http/server2/server.o
-	g++ -o$@ $(LDFLAGS) $^ $(LIBS)
-
-examples/cpp11/http/server3/http_server.exe: \
-		examples/cpp11/http/server3/connection.o \
-		examples/cpp11/http/server3/main.o \
-		examples/cpp11/http/server3/mime_types.o \
-		examples/cpp11/http/server3/reply.o \
-		examples/cpp11/http/server3/request_handler.o \
-		examples/cpp11/http/server3/request_parser.o \
-		examples/cpp11/http/server3/server.o
-	g++ -o$@ $(LDFLAGS) $^ $(LIBS)
-
-examples/cpp11/services/daytime_client.exe: \
-		examples/cpp11/services/daytime_client.o \
-		examples/cpp11/services/logger_service.o
 	g++ -o$@ $(LDFLAGS) $^ $(LIBS)
 
 .cpp.o:
