--- a/asio/src/tests/properties/Makefile.msc
+++ b/asio/src/tests/properties/Makefile.msc
@@ -42,26 +42,22 @@ _WIN32_WINNT=0x0601
 DEFINES = \
 	-DASIO_DISABLE_IOCP \
 	-D_WIN32_WINNT=$(_WIN32_WINNT) \
-	-DBOOST_ALL_NO_LIB \
-	-DBOOST_CHRONO_DONT_PROVIDE_HYBRID_ERROR_HANDLING
+	-DBOOST_ALL_NO_LIB
 !else
 ! ifdef STORE
 DEFINES = \
 	-DWINAPI_FAMILY=WINAPI_FAMILY_PC_APP \
 	-DBOOST_ALL_NO_LIB -D_WIN32_WINNT=$(_WIN32_WINNT) \
-	-DUNICODE -D_UNICODE \
-	-DBOOST_CHRONO_DONT_PROVIDE_HYBRID_ERROR_HANDLING
+	-DUNICODE -D_UNICODE
 ! else
 !  ifdef WINRT
 DEFINES = \
 	-ZW -FI SDKDDKVer.h -FI winapifamily.h -DWINAPI_FAMILY=WINAPI_PARTITION_APP \
-	-DBOOST_ALL_NO_LIB \
-	-DBOOST_CHRONO_DONT_PROVIDE_HYBRID_ERROR_HANDLING
+	-DBOOST_ALL_NO_LIB
 !  else
 DEFINES = \
 	-D_WIN32_WINNT=$(_WIN32_WINNT) \
-	-DBOOST_ALL_NO_LIB \
-	-DBOOST_CHRONO_DONT_PROVIDE_HYBRID_ERROR_HANDLING
+	-DBOOST_ALL_NO_LIB
 !  endif
 ! endif
 !endif
