Remove dependency: Boost.Config

--- a/asio/src/Makefile.mgw
+++ b/asio/src/Makefile.mgw
@@ -13,7 +13,7 @@ OPTIM_LDFLAGS =
 endif
 
 ifndef STANDALONE
-BOOST_CXXFLAGS = -I$(BOOSTDIR) -DASIO_ENABLE_BOOST
+BOOST_CXXFLAGS = -I$(BOOSTDIR)
 endif
 
 ifdef SEPARATE_COMPILATION
