--- a/asio/src/tests/properties/Makefile.msc
+++ b/asio/src/tests/properties/Makefile.msc
@@ -65,7 +65,7 @@ DEFINES = \
 !ifdef STANDALONE
 STANDALONE_CXXFLAGS = -DASIO_STANDALONE
 !else
-STANDALONE_CXXFLAGS = -I$(BOOSTDIR) -DASIO_ENABLE_BOOST
+STANDALONE_CXXFLAGS = -I$(BOOSTDIR)
 !endif
 
 CXXFLAGS = \
