Switch to С++17: C++17 is always enabled.
Signed-off-by: Vladislav Shchapov <vladislav@shchapov.ru>

--- a/asio/src/Makefile.mgw
+++ b/asio/src/Makefile.mgw
@@ -23,7 +23,7 @@ SEPARATE_COMPILATION_CXXFLAGS = \
 	-DASIO_ENABLE_CANCELIO
 endif
 
-CXXFLAGS = -g -Wall -Wextra -mthreads -I../include \
+CXXFLAGS = -std=gnu++17 -g -Wall -Wextra -mthreads -I../include \
 	$(OPTIM_CXXFLAGS) \
 	$(BOOST_CXXFLAGS) \
 	$(SEPARATE_COMPILATION_CXXFLAGS)
