Switch to С++17: std::chrono (ASIO_HAS_STD_CHRONO, ASIO_HAS_CHRONO).
Signed-off-by: Vladislav Shchapov <vladislav@shchapov.ru>

--- a/asio/configure.ac
+++ b/asio/configure.ac
@@ -22,7 +22,7 @@ AC_ARG_WITH(boost,
       CPPFLAGS="$CPPFLAGS -I${withval}"
       LIBS="$LIBS -L${withval}/stage/lib"
     fi
-    CPPFLAGS="$CPPFLAGS -DASIO_ENABLE_BOOST -DBOOST_CHRONO_HEADER_ONLY -DBOOST_CHRONO_DONT_PROVIDE_HYBRID_ERROR_HANDLING"
+    CPPFLAGS="$CPPFLAGS -DASIO_ENABLE_BOOST"
   fi
 ],
 [
