Remove unused macro: ASIO_STANDALONE.
Signed-off-by: Vladislav Shchapov <vladislav@shchapov.ru>

--- a/asio/src/Makefile.msc
+++ b/asio/src/Makefile.msc
@@ -71,10 +71,6 @@ SEPARATE_COMPILATION_CXXFLAGS = \
 	-DASIO_ENABLE_CANCELIO
 !endif
 
-!ifdef STANDALONE
-STANDALONE_CXXFLAGS = -DASIO_STANDALONE
-!endif
-
 CXXFLAGS = \
 	$(COMMON_CXXFLAGS) \
 	$(STD_CXXFLAGS) \
@@ -82,8 +78,7 @@ CXXFLAGS = \
 	$(DEBUG_CXXFLAGS) \
 	$(UNICODE_CXXFLAGS) \
 	$(TRACKING_CXXFLAGS) \
-	$(SEPARATE_COMPILATION_CXXFLAGS) \
-	$(STANDALONE_CXXFLAGS)
+	$(SEPARATE_COMPILATION_CXXFLAGS)
 
 !ifndef SSLDIR
 SSLDIR = ../../openssl-0.9.8g
