--- a/asio/src/tests/properties/Makefile.msc
+++ b/asio/src/tests/properties/Makefile.msc
@@ -62,18 +62,13 @@ DEFINES = \
 ! endif
 !endif
 
-!ifdef STANDALONE
-STANDALONE_CXXFLAGS = -DASIO_STANDALONE
-!endif
-
 CXXFLAGS = \
 	$(COMMON_CXXFLAGS) \
 	$(STD_CXXFLAGS) \
 	$(WARNINGS_CXXFLAGS) \
 	$(DEBUG_CXXFLAGS) \
 	$(UNICODE_CXXFLAGS) \
-	$(TRACKING_CXXFLAGS) \
-	$(STANDALONE_CXXFLAGS)
+	$(TRACKING_CXXFLAGS)
 
 CPP11_TEST_EXES = \
 	cpp11\query_free.exe \
