--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04]
-        compiler: [g++-10, g++-11, clang++-12]
+        compiler: [g++-10, g++-11, clang++-13]
         cxx-std: ['c++17', 'c++20']
         separate-compilation: ['']
         #separate-compilation: ['', '--enable-separate-compilation']
@@ -43,10 +43,10 @@ jobs:
             cxx-std: c++20 -fcoroutines
             optim-level: -O2
           #
-          # Linux / clang++-12 -std=c++20 / -O2 / standalone
+          # Linux / clang++-13 -std=c++20 / -O2 / standalone
           #
           - os: ubuntu-20.04
-            compiler: clang++-12
+            compiler: clang++-13
             cxx-std: c++20
             optim-level: -O2
 
@@ -56,12 +56,31 @@ jobs:
       CXXFLAGS: -std=${{ matrix.cxx-std }} ${{ matrix.optim-level }} -Wall -Wextra ${{ matrix.no-deprecated }} ${{ matrix.select-reactor }} ${{ matrix.handler-tracking }}
     steps:
     - uses: actions/checkout@v3
-    - name: Add repositories for GCC 11
+
+    - name: Init Ubuntu
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y lsb-release wget software-properties-common gnupg
+
+    - name: Install GCC 10
+      run: |
+        sudo apt-get install -y g++-10 libstdc++-10-dev
+      if: ${{ matrix.compiler == 'g++-10' }}
+
+    - name: Install GCC 11
       run: |
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-      if: ${{ matrix.cxx == 'g++-11' }}
-    - name: Install compiler
-      run: sudo apt-get install -y ${{ matrix.compiler }}
+        sudo apt-get install -y g++-11 libstdc++-11-dev
+      if: ${{ matrix.compiler == 'g++-11' }}
+
+    - name: Install Clang 13
+      run: |
+        sudo apt-get install -y g++-10 libstdc++-10-dev
+        wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+        sudo add-apt-repository "deb http://apt.llvm.org/$(lsb_release -cs)/  llvm-toolchain-$(lsb_release -cs)-13 main"
+        sudo apt-get install -y clang-13 libomp-13-dev libc++-13-dev libc++abi-13-dev
+      if: ${{ matrix.compiler == 'clang++-13' }}
+
     - name: Configure
       working-directory: asio
       run: |
