--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -16,9 +16,10 @@ jobs:
         separate-compilation: ['']
         #separate-compilation: ['', '--enable-separate-compilation']
         optim-level: ['-O0']
-        no-deprecated: ['']
         select-reactor: ['', '-DASIO_DISABLE_EPOLL']
         handler-tracking: ['']
+        apt-install: ['']
+        libs: ['']
         #exclude:
           # Older compilers don't support newer std variants
           #- compiler: g++-11
@@ -49,11 +50,22 @@ jobs:
             compiler: clang++-13
             cxx-std: c++20
             optim-level: -O2
+          #
+          # Linux / g++-11 / -O0 / standalone / io_uring
+          #
+          - os: ubuntu-22.04
+            compiler: g++
+            optim-level: -O0
+            cxx-std: c++20
+            apt-install: 'sudo apt-get install -y g++ liburing-dev'
+            select-reactor: '-DASIO_HAS_IO_URING -DASIO_DISABLE_EPOLL'
+            libs: '-luring'
 
     runs-on: ${{ matrix.os }}
     env:
       CXX: ${{ matrix.compiler }}
-      CXXFLAGS: -std=${{ matrix.cxx-std }} ${{ matrix.optim-level }} -Wall -Wextra ${{ matrix.no-deprecated }} ${{ matrix.select-reactor }} ${{ matrix.handler-tracking }}
+      CXXFLAGS: -std=${{ matrix.cxx-std }} ${{ matrix.optim-level }} -Wall -Wextra ${{ matrix.select-reactor }} ${{ matrix.handler-tracking }}
+      LIBS: ${{ matrix.libs }}
     steps:
     - uses: actions/checkout@v3
 
@@ -61,6 +73,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y lsb-release wget software-properties-common gnupg
+        ${{ matrix.apt-install }}
 
     - name: Install GCC 10
       run: |
