--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -6,65 +6,45 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  ubuntu2004:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04]
         compiler: [g++-10, g++-11, clang++-13]
         cxx-std: ['c++17', 'c++20']
+        cxxflags: ['']
         separate-compilation: ['']
         #separate-compilation: ['', '--enable-separate-compilation']
-        optim-level: ['-O0']
-        select-reactor: ['', '-DASIO_DISABLE_EPOLL']
+        optim-level: ['-O0', '-O3']
+        select-reactor: ['']
         handler-tracking: ['']
-        apt-install: ['']
-        libs: ['']
-        #exclude:
-          # Older compilers don't support newer std variants
-          #- compiler: g++-11
-          #  cxx-std: c++2a
-          # Trim builds that use separate compilation
-          #- compiler: g++-9
-          #  separate-compilation: --enable-separate-compilation
         include:
           #
-          # Linux / g++-10 / -O0 / standalone / handler tracking
+          # Linux / g++-10 / -O0 / handler tracking
           #
-          - os: ubuntu-20.04
-            compiler: g++-10
+          - compiler: g++-10
             cxx-std: c++17
             optim-level: -O0
             handler-tracking: -DASIO_ENABLE_HANDLER_TRACKING
           #
-          # Linux / g++-10 -std=c++20 -fcoroutines / -O2 / standalone
+          # Linux / g++-10 / -O0 / without epoll
           #
-          - os: ubuntu-20.04
-            compiler: g++-10
-            cxx-std: c++20 -fcoroutines
-            optim-level: -O2
-          #
-          # Linux / clang++-13 -std=c++20 / -O2 / standalone
-          #
-          - os: ubuntu-20.04
-            compiler: clang++-13
-            cxx-std: c++20
-            optim-level: -O2
-          #
-          # Linux / g++-11 / -O0 / standalone / io_uring
-          #
-          - os: ubuntu-22.04
-            compiler: g++
+          - compiler: g++-10
+            cxx-std: c++17
             optim-level: -O0
+            select-reactor: -DASIO_DISABLE_EPOLL
+          #
+          # Linux / g++-10 -std=c++20 -fcoroutines / -O3
+          #
+          - compiler: g++-10
             cxx-std: c++20
-            apt-install: 'sudo apt-get install -y g++ liburing-dev'
-            select-reactor: '-DASIO_HAS_IO_URING -DASIO_DISABLE_EPOLL'
-            libs: '-luring'
+            cxxflags: -fcoroutines
+            optim-level: -O3
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-20.04
     env:
       CXX: ${{ matrix.compiler }}
-      CXXFLAGS: -std=${{ matrix.cxx-std }} ${{ matrix.optim-level }} -Wall -Wextra ${{ matrix.select-reactor }} ${{ matrix.handler-tracking }}
+      CXXFLAGS: -std=${{ matrix.cxx-std }} ${{ matrix.cxxflags }} ${{ matrix.optim-level }} -Wall -Wextra ${{ matrix.select-reactor }} ${{ matrix.handler-tracking }}
       LIBS: ${{ matrix.libs }}
     steps:
     - uses: actions/checkout@v3
@@ -93,6 +73,101 @@ jobs:
         sudo add-apt-repository "deb http://apt.llvm.org/$(lsb_release -cs)/  llvm-toolchain-$(lsb_release -cs)-13 main"
         sudo apt-get install -y clang-13 libomp-13-dev libc++-13-dev libc++abi-13-dev
       if: ${{ matrix.compiler == 'clang++-13' }}
+
+    - name: Configure
+      working-directory: asio
+      run: |
+        ./autogen.sh
+        ./configure ${{ matrix.separate-compilation }}
+    - name: Build And Test
+      working-directory: asio
+      run: make && make check
+
+
+  ubuntu2204:
+    strategy:
+      fail-fast: false
+      matrix:
+        compiler: [g++-10, g++-11, g++-12]
+        cxx-std: ['c++17', 'c++20']
+        separate-compilation: ['']
+        #separate-compilation: ['', '--enable-separate-compilation']
+        optim-level: ['-O0', '-O3']
+        select-reactor: ['']
+        handler-tracking: ['']
+        install: ['']
+        libs: ['']
+        include:
+          #
+          # Linux / g++-11 / -O0 / handler tracking
+          #
+          - compiler: g++-11
+            cxx-std: c++17
+            optim-level: -O0
+            handler-tracking: -DASIO_ENABLE_HANDLER_TRACKING
+          #
+          # Linux / g++-10 / -O0 / without epoll
+          #
+          - compiler: g++-11
+            cxx-std: c++17
+            optim-level: -O0
+            select-reactor: -DASIO_DISABLE_EPOLL
+          #
+          # Linux / g++-10 / -O0 / io_uring
+          #
+          - compiler: g++-10
+            optim-level: -O0
+            cxx-std: c++20
+            install: sudo apt-get install -y g++ liburing-dev
+            select-reactor: -DASIO_HAS_IO_URING -DASIO_DISABLE_EPOLL
+            libs: -luring
+          #
+          # Linux / g++-11 / -O0 / io_uring
+          #
+          - compiler: g++-11
+            optim-level: -O0
+            cxx-std: c++20
+            install: sudo apt-get install -y g++ liburing-dev
+            select-reactor: -DASIO_HAS_IO_URING -DASIO_DISABLE_EPOLL
+            libs: -luring
+          #
+          # Linux / g++-12 / -O0 / io_uring
+          #
+          - compiler: g++-12
+            optim-level: -O0
+            cxx-std: c++20
+            install: sudo apt-get install -y g++ liburing-dev
+            select-reactor: -DASIO_HAS_IO_URING -DASIO_DISABLE_EPOLL
+            libs: -luring
+
+    runs-on: ubuntu-22.04
+    env:
+      CXX: ${{ matrix.compiler }}
+      CXXFLAGS: -std=${{ matrix.cxx-std }} ${{ matrix.optim-level }} -Wall -Wextra ${{ matrix.select-reactor }} ${{ matrix.handler-tracking }}
+      LIBS: ${{ matrix.libs }}
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Init Ubuntu
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y lsb-release wget software-properties-common gnupg
+        ${{ matrix.install }}
+
+    - name: Install GCC 10
+      run: |
+        sudo apt-get install -y g++-10 libstdc++-10-dev
+      if: ${{ matrix.compiler == 'g++-10' }}
+
+    - name: Install GCC 11
+      run: |
+        sudo apt-get install -y g++-11 libstdc++-11-dev
+      if: ${{ matrix.compiler == 'g++-11' }}
+
+    - name: Install GCC 12
+      run: |
+        sudo apt-get install -y g++-12 libstdc++-12-dev
+      if: ${{ matrix.compiler == 'g++-12' }}
 
     - name: Configure
       working-directory: asio
