Switch to С++20: std::chrono (ASIO_HAS_STD_CHRONO, ASIO_HAS_CHRONO).
Signed-off-by: Vladislav Shchapov <vladislav@shchapov.ru>

--- a/asio/src/Makefile.msc
+++ b/asio/src/Makefile.msc
@@ -48,26 +48,22 @@ _WIN32_WINNT=0x0601
 DEFINES = \
 	-DASIO_DISABLE_IOCP \
 	-D_WIN32_WINNT=$(_WIN32_WINNT) \
-	-DBOOST_ALL_NO_LIB \
-	-DBOOST_CHRONO_DONT_PROVIDE_HYBRID_ERROR_HANDLING
+	-DBOOST_ALL_NO_LIB
 !else
 ! ifdef STORE
 DEFINES = \
 	-DWINAPI_FAMILY=WINAPI_FAMILY_PC_APP \
 	-DBOOST_ALL_NO_LIB -D_WIN32_WINNT=$(_WIN32_WINNT) \
-	-DUNICODE -D_UNICODE \
-	-DBOOST_CHRONO_DONT_PROVIDE_HYBRID_ERROR_HANDLING
+	-DUNICODE -D_UNICODE
 ! else
 !  ifdef WINRT
 DEFINES = \
 	-ZW -FI SDKDDKVer.h -FI winapifamily.h -DWINAPI_FAMILY=WINAPI_PARTITION_APP \
-	-DBOOST_ALL_NO_LIB \
-	-DBOOST_CHRONO_DONT_PROVIDE_HYBRID_ERROR_HANDLING
+	-DBOOST_ALL_NO_LIB
 !  else
 DEFINES = \
 	-D_WIN32_WINNT=$(_WIN32_WINNT) \
-	-DBOOST_ALL_NO_LIB \
-	-DBOOST_CHRONO_DONT_PROVIDE_HYBRID_ERROR_HANDLING
+	-DBOOST_ALL_NO_LIB
 !  endif
 ! endif
 !endif
@@ -126,7 +122,6 @@ UNIT_TEST_EXES = \
 	tests\unit\async_result.exe \
 	tests\unit\awaitable.exe \
 	tests\unit\basic_datagram_socket.exe \
-	tests\unit\basic_deadline_timer.exe \
 	tests\unit\basic_file.exe \
 	tests\unit\basic_random_access_file.exe \
 	tests\unit\basic_raw_socket.exe \
@@ -160,7 +155,6 @@ UNIT_TEST_EXES = \
 	tests\unit\connect.exe \
 	tests\unit\connect_pipe.exe \
 	tests\unit\coroutine.exe \
-	tests\unit\deadline_timer.exe \
 	tests\unit\defer.exe \
 	tests\unit\deferred.exe \
 	tests\unit\detached.exe \
@@ -258,7 +252,6 @@ UNIT_TEST_EXES = \
 	tests\unit\this_coro.exe \
 	tests\unit\thread.exe \
 	tests\unit\thread_pool.exe \
-	tests\unit\time_traits.exe \
 	tests\unit\ts\buffer.exe \
 	tests\unit\ts\executor.exe \
 	tests\unit\ts\internet.exe \
