--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        compiler: [g++-10, g++-11, clang++-13]
+        compiler: [g++-11, clang++-16]
         cxx-std: ['c++20']
         cxxflags: ['']
         separate-compilation: ['']
@@ -20,23 +20,23 @@ jobs:
         handler-tracking: ['']
         include:
           #
-          # Linux / g++-10 / -O0 / handler tracking
+          # Linux / g++-11 / -O0 / handler tracking
           #
-          - compiler: g++-10
+          - compiler: g++-11
             cxx-std: c++20
             optim-level: -O0
             handler-tracking: -DASIO_ENABLE_HANDLER_TRACKING
           #
-          # Linux / g++-10 / -O0 / without epoll
+          # Linux / g++-11 / -O0 / without epoll
           #
-          - compiler: g++-10
+          - compiler: g++-11
             cxx-std: c++20
             optim-level: -O0
             select-reactor: -DASIO_DISABLE_EPOLL
           #
-          # Linux / g++-10 -std=c++20 -fcoroutines / -O3
+          # Linux / g++-11 -std=c++20 -fcoroutines / -O3
           #
-          - compiler: g++-10
+          - compiler: g++-11
             cxx-std: c++20
             cxxflags: -fcoroutines
             optim-level: -O3
@@ -55,24 +55,20 @@ jobs:
         sudo apt-get install -y lsb-release wget software-properties-common gnupg
         ${{ matrix.apt-install }}
 
-    - name: Install GCC 10
-      run: |
-        sudo apt-get install -y g++-10 libstdc++-10-dev
-      if: ${{ matrix.compiler == 'g++-10' }}
-
     - name: Install GCC 11
       run: |
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
         sudo apt-get install -y g++-11 libstdc++-11-dev
       if: ${{ matrix.compiler == 'g++-11' }}
 
-    - name: Install Clang 13
+    - name: Install Clang 16
       run: |
-        sudo apt-get install -y g++-10 libstdc++-10-dev
+        sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+        sudo apt-get install -y g++-11 libstdc++-11-dev
         wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-        sudo add-apt-repository "deb http://apt.llvm.org/$(lsb_release -cs)/  llvm-toolchain-$(lsb_release -cs)-13 main"
-        sudo apt-get install -y clang-13 libomp-13-dev libc++-13-dev libc++abi-13-dev
-      if: ${{ matrix.compiler == 'clang++-13' }}
+        sudo add-apt-repository "deb http://apt.llvm.org/$(lsb_release -cs)/  llvm-toolchain-$(lsb_release -cs)-16 main"
+        sudo apt-get install -y clang-16 libomp-16-dev libc++-16-dev libc++abi-16-dev
+      if: ${{ matrix.compiler == 'clang++-16' }}
 
     - name: Configure
       working-directory: asio
@@ -88,7 +84,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        compiler: [g++-10, g++-11, g++-12]
+        compiler: [g++-11, g++-12]
         cxx-std: ['c++20']
         separate-compilation: ['']
         #separate-compilation: ['', '--enable-separate-compilation']
@@ -106,21 +102,12 @@ jobs:
             optim-level: -O0
             handler-tracking: -DASIO_ENABLE_HANDLER_TRACKING
           #
-          # Linux / g++-10 / -O0 / without epoll
+          # Linux / g++-11 / -O0 / without epoll
           #
           - compiler: g++-11
             cxx-std: c++20
             optim-level: -O0
             select-reactor: -DASIO_DISABLE_EPOLL
-          #
-          # Linux / g++-10 / -O0 / io_uring
-          #
-          - compiler: g++-10
-            optim-level: -O0
-            cxx-std: c++20
-            install: sudo apt-get install -y g++ liburing-dev
-            select-reactor: -DASIO_HAS_IO_URING -DASIO_DISABLE_EPOLL
-            libs: -luring
           #
           # Linux / g++-11 / -O0 / io_uring
           #
@@ -153,11 +140,6 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y lsb-release wget software-properties-common gnupg
         ${{ matrix.install }}
-
-    - name: Install GCC 10
-      run: |
-        sudo apt-get install -y g++-10 libstdc++-10-dev
-      if: ${{ matrix.compiler == 'g++-10' }}
 
     - name: Install GCC 11
       run: |
