Switch to С++20: Coroutines (ASIO_HAS_CO_AWAIT, ASIO_HAS_STD_COROUTINE).
Signed-off-by: Vladislav Shchapov <vladislav@shchapov.ru>

--- a/asio/src/tests/Makefile.am
+++ b/asio/src/tests/Makefile.am
@@ -211,7 +211,7 @@ check_PROGRAMS += \
 check_PROGRAMS += \
 	unit/experimental/promise
 
-if HAVE_COROUTINES
+# COROUTINES
 check_PROGRAMS += \
 	unit/experimental/awaitable_operators \
 	unit/experimental/co_composed \
@@ -224,7 +224,6 @@ check_PROGRAMS += \
 	unit/experimental/coro/simple_test \
 	unit/experimental/coro/stack_test \
 	unit/experimental/coro/use_coro
-endif
 
 if HAVE_OPENSSL
 check_PROGRAMS += \
@@ -419,7 +418,7 @@ TESTS += \
 TESTS += \
 	unit/experimental/promise
 
-if HAVE_COROUTINES
+# COROUTINES
 TESTS += \
 	unit/experimental/awaitable_operators \
 	unit/experimental/co_composed \
@@ -432,7 +431,6 @@ TESTS += \
 	unit/experimental/coro/simple_test \
 	unit/experimental/coro/stack_test \
 	unit/experimental/coro/use_coro
-endif
 
 if HAVE_OPENSSL
 TESTS += \
@@ -646,7 +644,7 @@ unit_experimental_concurrent_channel_SOURCES = unit/experimental/concurrent_chan
 # C++20
 unit_experimental_promise_SOURCES = unit/experimental/promise.cpp
 
-if HAVE_COROUTINES
+# COROUTINES
 unit_experimental_awaitable_operators_SOURCES = unit/experimental/awaitable_operators.cpp
 unit_experimental_co_composed_SOURCES = unit/experimental/co_composed.cpp
 unit_experimental_coro_allocator_SOURCES = unit/experimental/coro/allocator.cpp
@@ -658,7 +656,6 @@ unit_experimental_coro_partial_SOURCES = unit/experimental/coro/partial.cpp
 unit_experimental_coro_simple_test_SOURCES = unit/experimental/coro/simple_test.cpp
 unit_experimental_coro_stack_test_SOURCES = unit/experimental/coro/stack_test.cpp
 unit_experimental_coro_use_coro_SOURCES = unit/experimental/coro/use_coro.cpp
-endif
 
 if HAVE_OPENSSL
 unit_ssl_context_base_SOURCES = unit/ssl/context_base.cpp
