Switch to С++20: Coroutines (ASIO_HAS_CO_AWAIT, ASIO_HAS_STD_COROUTINE).
Signed-off-by: Vladislav Shchapov <vladislav@shchapov.ru>

--- a/asio/src/examples/cpp20/Makefile.am
+++ b/asio/src/examples/cpp20/Makefile.am
@@ -22,7 +22,7 @@ noinst_PROGRAMS = \
 	operations/composed_7 \
 	operations/composed_8
 
-if HAVE_COROUTINES
+# COROUTINES
 noinst_PROGRAMS += \
 	channels/throttling_proxy \
 	coroutines/chat_server \
@@ -35,7 +35,6 @@ noinst_PROGRAMS += \
 	coroutines/refactored_echo_server \
 	coroutines/timeout \
 	type_erasure/type_erasure
-endif
 
 AM_CXXFLAGS = -I$(srcdir)/../../../include
 
@@ -50,7 +49,7 @@ operations_composed_6_SOURCES = operations/composed_6.cpp
 operations_composed_7_SOURCES = operations/composed_7.cpp
 operations_composed_8_SOURCES = operations/composed_8.cpp
 
-if HAVE_COROUTINES
+# COROUTINES
 channels_throttling_proxy_SOURCES = channels/throttling_proxy.cpp
 coroutines_chat_server_SOURCES = coroutines/chat_server.cpp
 coroutines_echo_server_SOURCES = coroutines/echo_server.cpp
@@ -62,7 +61,6 @@ coroutines_echo_server_with_as_tuple_default_SOURCES = coroutines/echo_server_wi
 coroutines_refactored_echo_server_SOURCES = coroutines/refactored_echo_server.cpp
 coroutines_timeout_SOURCES = coroutines/timeout.cpp
 type_erasure_type_erasure_SOURCES = type_erasure/main.cpp type_erasure/stdin_line_reader.cpp type_erasure/sleep.cpp
-endif
 
 EXTRA_DIST = \
 	type_erasure/line_reader.hpp \
