--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -50,4 +50,4 @@ jobs:
         ./configure ${{ matrix.separate-compilation }}
     - name: Build And Test
       working-directory: asio
-      run: make && make check
+      run: make && make check || (cat ./src/tests/test-suite.log; false)
